# ebnfparser

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md
.github/workflows/: build-and-test.yaml  build-and-test.yml
docs/: gqlgrammar.xml
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  ebnf_ast.gtest.cpp  ebnf_ast.h
src/ebnf_convert/: CMakeLists.txt  ebnf_convert.cpp  ebnf_convert.gtest.cpp  ebnf_convert.h
src/flexbison.gen/: CMakeLists.txt  ebnf_lexer.flex.cpp  ebnf_parser.bison.cpp  ebnf_parser.bison.h  locations.bison.h
src/grammar/: CMakeLists.txt  ebnf_grammar_report.txt  ebnf_lexer.flex.l  ebnf_parser.bison.y  ebnf_parser.rules.bison.y
src/lexer/: CMakeLists.txt  ebnf_lexer.gtest.cpp  ebnf_lexer.h
src/parser/: CMakeLists.txt  ebnf_parser.cpp  ebnf_parser.gtest.cpp
src/parser_api/: CMakeLists.txt  ebnf_parse.cpp  ebnf_parse.gtest.cpp  ebnf_parse.h
